--- a/Drakborgen.vcxproj
+++ b/Drakborgen.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
     <ProjectGuid>{e837f69d-dd5d-47ee-bc32-9070a76d4419}</ProjectGuid>
-    <RootNamespace>DrakborgenCpp</RootNamespace>
+    <RootNamespace>Drakborgen</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
